fixing IOSbug with cropped text

--- a/src/features/formPost.module.scss
+++ b/src/features/formPost.module.scss
@@ -44,6 +44,9 @@
   align-items: center;
   justify-content: flex-end;
   gap: 25px;
+  & button {
+    color: black !important;
+  }
 }
 
 @media (max-width: 820px) {
